@@ -36,6 +36,7 @@ extern PyObject* pyfuzzygridder1d(PyObject *self, PyObject *args);
 
 /* functions from gridder2d.c */
 extern PyObject* pygridder2d(PyObject *self, PyObject *args);
+extern PyObject* pyfuzzygridder2d(PyObject *self, PyObject *args);
 
 /* function from gridder3d.c */
 extern PyObject* pygridder3d(PyObject *self, PyObject *args);
@@ -145,6 +146,25 @@ static PyMethodDef XRU_Methods[] = {
      "  ymax ... minimum y-value of the grid\n"
      "  out .... output data\n"
      "  norm ... normalization array\n"
+     "  flags .. flags to specify behavior\n"
+    },
+    {"fuzzygridder2d", pyfuzzygridder2d, METH_VARARGS,
+     "Function performs 2D fuzzy gridding on 1D input data. \n\n"
+     "Parameters\n"
+     "----------\n"
+     "  x ...... input x-values (1D numpy array - float64)\n"
+     "  y ...... input y-values (1D numpy array - float64)\n"
+     "  data ... input data (1D numpy array - float64)\n"
+     "  nx ..... number of grid points in x-direction\n"
+     "  ny ..... number of grid points in y-direction\n"
+     "  xmin ... minimum x-value of the grid\n"
+     "  xmax ... maximum x-value of the grid\n"
+     "  ymin ... minimum y-value of the grid\n"
+     "  ymax ... minimum y-value of the grid\n"
+     "  out .... output data\n"
+     "  norm ... normalization array\n"
+     "  wx ..... fuzzy width of data points in x-direction\n"
+     "  wy ..... fuzzy width of data points in y-direction\n"
      "  flags .. flags to specify behavior\n"
     },
     {"gridder3d", pygridder3d, METH_VARARGS,
